--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         }
         .time {
             text-align: center;
-            margin: 16px 0;
+            margin-bottom: 16px;
             color: #888;
             font-size: 12px;
         }
