--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         <div class="time" id="data">
             Czas: 21:47:03 24.05.2024
         </div>
-        <div class="info-section" id="info-section">
+        <div class="blue-section" id="info-section">
             <p>
                 <img src="normal_u391.svg" alt="Info Icon">
                 Kiedy nie skorzystasz z mDowodu
