--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
         }
         .info-section.blue {
             background-color: #dfecf9;
+            padding: 16px;
+            border-radius: 8px;
+            margin-bottom: 16px;
+            color: #2f353f;
+            position: relative;
+            transition: transform 0.5s;
         }
         .info-section img {
             vertical-align: middle;
@@ -399,7 +405,7 @@
         <div class="time" id="data">
             Czas: 21:47:03 24.05.2024
         </div>
-        <div class="blue-section" id="info-section">
+        <div class="info-section" id="info-section">
             <p>
                 <img src="normal_u391.svg" alt="Info Icon">
                 Kiedy nie skorzystasz z mDowodu
@@ -412,7 +418,7 @@
                 <img src="righticon.svg" alt="Right Icon" id="right-icon">
             </div>
         </div>
-        <div class="icon-section blue" id="info-section" style="display: none;">
+        <div class="icon-section blue" id="blue-section" style="display: none;">
             <p>
                 <img src="normal_u391.svg" alt="Info Icon">
                 A kiedy skorzystasz z mDowodu
