--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <img src="righticon.svg" alt="Right Icon" id="right-icon">
             </div>
         </div>
-        <div class="icon-section blue" id="blue-section" style="display: none;">
+        <div class="icon-section.blue" id="info-section" style="display: none;">
             <p>
                 <img src="normal_u391.svg" alt="Info Icon">
                 A kiedy skorzystasz z mDowodu
