--- a/index.html
+++ b/index.html
@@ -70,16 +70,10 @@
             margin-bottom: 16px;
             color: #2f353f;
             position: relative;
-            transition: transform 0.5s;
+            transition: transform 0s;
         }
         .info-section.blue {
             background-color: #dfecf9;
-            padding: 16px;
-            border-radius: 8px;
-            margin-bottom: 16px;
-            color: #2f353f;
-            position: relative;
-            transition: transform 0.5s;
         }
         .info-section img {
             vertical-align: middle;
@@ -418,7 +412,7 @@
                 <img src="righticon.svg" alt="Right Icon" id="right-icon">
             </div>
         </div>
-        <div class="icon-section.blue" id="info-section" style="display: none;">
+        <div class="info-section blue" id="blue-section" style="display: none;">
             <p>
                 <img src="normal_u391.svg" alt="Info Icon">
                 A kiedy skorzystasz z mDowodu
@@ -427,8 +421,8 @@
                 We wszystkich innych sytuacjach – na przykład w urzędzie, sądzie, przychodni, na poczcie czy u notariusza.
             </p>
             <div class="center-icons">
-                <img src="lefticon.svg" alt="Left Icon" id="left-icon">
-                <img src="righticon.svg" alt="Right Icon" id="right-icon">
+                <img src="righticon.svg" alt="Right Icon" id="right-icon-blue">
+                <img src="lefticon.svg" alt="Left Icon" id="left-icon-blue">
             </div>
             <div class="close-icon" id="close-icon">
                 <img src="close.svg" alt="Close Icon">
