--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             display: flex;
             padding: 10px 0 35px 0; /* Adjusted padding for more space */
             box-sizing: border-box;
-            justify-content: space-evenly;
+            justify-content: space-between;
         }
         .bottom-nav-item {
             display: flex;
