--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html lang="pl">
 <!-- lixzz -->
 <!-- Mirrored from mdwd.cba.pl/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 05 Aug 2024 11:50:16 GMT -->
@@ -355,13 +355,13 @@
             display: flex;
             padding: 10px 0 35px 0; /* Adjusted padding for more space */
             box-sizing: border-box;
-            justify-content: space-between;
+            justify-content: space-evenly;
         }
         .bottom-nav-item {
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-left: -20px;
+            margin-left: -18px;
             font-size: 12px;
             font-weight: 600;
             color: #888;
