--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             border-radius: 8px;
             width: 135px;
             height: 180px;
-            margin-bottom: 0px; /* Reduced space */
+            margin-bottom: 10px; /* Reduced space */
         }
 
         .user-photo:after {
@@ -150,9 +150,9 @@
             box-shadow: inset 0px 0px 4px 5px #ffffff;
         }
         .flag {
-            width: 80px;
-            height: auto;
-            margin-bottom: 2px; /* 10px Reduced space */
+            width: 70px;
+            height: 45px;
+            margin-bottom: 10px; /* 10px Reduced space */
         }
         .republic {
             display: flex;
@@ -179,7 +179,7 @@
             font-family: 'Open Sans', sans-serif;
             font-weight: 550;
             font-size: 10px;
-            padding-bottom: 3.5px;
+            padding-bottom: 2.5px;
             color: #7A7D83;
             text-align: left;
         }
