--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
             align-items: center;
         }
         .action-button .icon-text img {
-            width: 28px; /* Updated size for larger icons */
-            height: 28px; /* Updated size for larger icons */
+            width: 30px; /* 28px Updated size for larger icons */
+            height: 30px; /* 28px Updated size for larger icons */
             margin-right: 16px;
             object-fit: contain; /* Ensures icons are not stretched */
         }
@@ -340,8 +340,8 @@
             align-items: center;
         }
         .delete-button .icon-text img {
-            width: 28px; /* Updated size for larger icons */
-            height: 28px; /* Updated size for larger icons */
+            width: 20px; /* 28px Updated size for larger icons */
+            height: 20px; /* 28px Updated size for larger icons */
             margin-right: 16px;
             object-fit: contain; /* Ensures icons are not stretched */
         }
