--- a/index.html
+++ b/index.html
@@ -484,9 +484,7 @@
         <div class="last-update">
             <div>
                 <div class="last-update-text">Ostatnia aktualizacja</div>
-        <div class="time" id="data">
-                <div class="last-update-date">09.01.2025</div>
-                    </div>
+                <div class="last-update-date" id="data">09.01.2025</div>
             </div>
             <button id="aktualizuj">Aktualizuj</button>
         </div>
