--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             box-sizing: border-box;
         }
         .user-photo {
+            filter: grayscale(100%);
             position: relative;
             border-radius: 12px;
             width: 135px;
@@ -484,7 +485,7 @@
         <div class="last-update">
             <div>
                 <div class="last-update-text">Ostatnia aktualizacja</div>
-                <div class="last-update-date" id="data">09.01.2025</div>
+                <div class="last-update-date" id="data">16.02.2025</div>
             </div>
             <button id="aktualizuj">Aktualizuj</button>
         </div>
