--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
             </div>
             <div class="document-details">
                 <div class="info-card">
-                    <p><span class="label">PATRYCJA</span> <span class="description">Imię (imiona)</span></p>
-                    <p><span class="label">ZIELIŃSKA</span> <span class="description">Nazwisko</span></p>
+                    <p><span class="label">MAJA</span> <span class="description">Imię (imiona)</span></p>
+                    <p><span class="label">RUGAŁA</span> <span class="description">Nazwisko</span></p>
                     <p><span class="label">POLSKIE</span> <span class="description">Obywatelstwo</span></p>
                     <p><span class="label">15.02.2006</span> <span class="description">Data urodzenia</span></p>
                     <p><span class="label">062215781577</span> <span class="description">Numer PESEL</span></p>
